# genshin_finale_internet

./: .gitignore  FOGLIO_TEST_LIVE_1PAGINA.md  Genshin Manager — progetto.command  Genshin_Manager.command  Makefile  PROTOCOLLO_TEST_UTENTI.md  Procfile  README.md  config.py  genshin_manager.py  hoyolab_import_log.jsonl  logging_config.py  main.py  personaggi_ufficiali.py  pyproject.toml  render.yaml  requirements.txt  run_web.py
core/: __init__.py  armi_ufficiali.py  artefatto_service.py  build_service.py  checkpoint.py  custom_registry.py  dashboard_service.py  dps.py  dps_types.py  hoyolab_import.py  import_log.py  manual_import.py  manufatti_pezzi_en_by_fingerprint.py  manufatti_pezzi_suggerimenti_extra.py  manufatti_ufficiali.py  manufatto_catalog_resolve.py  nome_normalization.py  nomi_whitelist.py  personaggio_service.py  pezzi_manufatti_ufficiali.py  rotation_dps.py  services.py  set_bonus_proxy.py  team_service.py  validation.py
data/: custom_entities.json
db/: __init__.py  artifact_catalog.py  connection.py  models.py  repositories.py
gui/: __init__.py  app.py  form_checkpoint.py  safe_ops.py  widgets.py
mac/: com.genshinmanager.web.plist  com.genshinmanager.web.plist.template  install_launchagent.sh  run_web_launchd.sh
scripts/: reset_archivio_locale.py
tests/: __init__.py  conftest.py  stress_harness.py  test_checkpoint.py  test_core_dps_build_stress.py  test_form_checkpoint.py  test_gui_import_smoke.py  test_hoyolab_import_safety.py  test_manual_import.py  test_manufatti_pezzi_suggerimenti_extra.py  test_nomi_whitelist.py  test_pipeline_merge.py  (+5 more)
(+44 files in other folders)
